fixed scrolling problem, aligned cards and profile ready for submission #7

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -12,13 +12,13 @@
 
 @media screen and (min-width: 320px) and (max-width: 760px) {
   .cards {
-    width: auto;
+    margin-right: 19px;
   }
   .cards__list {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(6, 1fr);
     width: 282px;
-    margin: 0 auto;
+    padding-left: 12px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1275px) {
