--- a/blocks/header.css
+++ b/blocks/header.css
@@ -8,7 +8,6 @@
 @media screen and (min-width: 320px) and (max-width: 760px) {
   .header {
     margin-top: 28px;
-    padding-left: 27px;
   }
   .header__logo {
     width: 126px;
