--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -91,6 +91,8 @@
     font-size: 22px;
     padding-top: 26.25px;
     width: 196px;
+    text-overflow: ellipsis;
+    margin-left: 19px;
   }
   .profile__edit-button {
     margin-top: 24px;
@@ -101,7 +103,7 @@
   }
   .profile__add-button {
     width: 282px;
-    margin-left: 19px;
+    margin-right: 19px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1280px) {
